--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -5,12 +5,12 @@ app.nextPhrase=Enter next city or type exit to exit
 app.exit=exit
 
 intro=Type command or help > 
-greeting=Hello, {0}
+localized.hello=Hello, {0}
 error.logonFailed=Please authenticate firstly!
 
 locale.text=Here will be your {0}! It costs {1} thousands rubles
 
-welcome.intro=This is welcome page where you can navigate to another chapters. But, firstly, you should be <a th:href="@{/login}">logged into the System</a>. Choose any chapter to authorize.
+welcome.intro=Hello friend!
 
 genre.code.alt=Code:
 genre.name.alt=Name:
